@startuml
'https://plantuml.com/class-diagram

package galaxy_sim.view{
    class View << trait >>
    class ViewImpl extends View
    class SwingGUI
}

package galaxy_sim.actors{
    class ViewActor << object >>
    class ViewActorCommand << trait >>
}

ViewActor ..> ViewActorCommand
ViewImpl --> SwingGUI : use
SwingGUI --> View : use
ViewImpl --> ViewActorCommand : use
ViewActor --> View : use

@enduml